@@ -6,7 +6,8 @@ TOOLKIT
 
   * General
 
-- Added support for the new S3 Versioning feature.
+- Added support for the new S3 Bucket Versioning feature, and
+  for Multi-Factor authenticated deletes.
 - S3ServiceMulti#downloadObjects method now automatically verifies
   that the data received matches the ETag MD5 hash value provided by
   S3. JetS3t's applications, and any third-party clients that use 
